namespaces/myblog/myblog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myblog
  labels:
    name: myblog
    istio.io/rev: asm-1112-17
