namespaces/myblog/myblog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog
  labels:
    app: myblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myblog
  template:
    metadata:
      labels:
        app: myblog
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: myblog
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
          image: us-east4-docker.pkg.dev/mygke-200/containers/myblog:262a011
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 5m
              memory: 6Mi
            limits:
              cpu: 15m
              memory: 122Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            tcpSocket:
              port: 8080
          volumeMounts:
          - mountPath: /tmp
            name: tmp
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - emptyDir: {}
        name: tmp
