namespaces/myblog/myblog/authorizationpolicies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: myblog
spec:
  selector:
    matchLabels:
      app: myblog
  rules:
  - to:
      - operation:
          methods: ["GET"]
          ports: ["8080"]
